(feat) CSS: fix column spacing

--- a/client/public/styles/normalize.css
+++ b/client/public/styles/normalize.css
@@ -183,9 +183,6 @@ sub {
 
 img {
   border: 0;
-  width: 300px;
-  height: 300px;
-  margin: 10px;
 }
 
 /**
