--- a/client/public/styles/skeleton.css
+++ b/client/public/styles/skeleton.css
@@ -54,23 +54,23 @@
     width: 80%; }
   .column,
   .columns {
-    margin-left: 4%; }
+    /*margin-left: 4%;*/ }
   .column:first-child,
   .columns:first-child {
     margin-left: 0; }
 
   .one.column,
-  .one.columns                    { width: 4.66666666667%; }
-  .two.columns                    { width: 13.3333333333%; }
-  .three.columns                  { width: 22%;            }
-  .four.columns                   { width: 30.6666666667%; }
-  .five.columns                   { width: 39.3333333333%; }
-  .six.columns                    { width: 48%;            }
-  .seven.columns                  { width: 56.6666666667%; }
-  .eight.columns                  { width: 65.3333333333%; }
-  .nine.columns                   { width: 74.0%;          }
-  .ten.columns                    { width: 82.6666666667%; }
-  .eleven.columns                 { width: 91.3333333333%; }
+  .one.columns                    { width: 8.33%; }
+  .two.columns                    { width: 16.66%; }
+  .three.columns                  { width: 25%; }
+  .four.columns                   { width: 33.33%; }
+  .five.columns                   { width: 41.66%; }
+  .six.columns                    { width: 50%; }
+  .seven.columns                  { width: 58.33%; }
+  .eight.columns                  { width: 66%; }
+  .nine.columns                   { width: 75%; }
+  .ten.columns                    { width: 83.33%; }
+  .eleven.columns                 { width: 91.67%; }
   .twelve.columns                 { width: 100%; margin-left: 0; }
 
   .one-third.column               { width: 30.6666666667%; }
@@ -374,7 +374,21 @@ form {
 /* Top Nav Bar Container
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .TopNavBarContainer {
+  margin: .25%;
+}
+.SettingIcon {
+  margin: 0 .25%;
+}
+.DriveDiv {
+  margin: 0 .25%;
+}
 
+/* Profile
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.avatar {
+  padding: 5%;
+  width: 30%;
+  height: 30%;
 }
 
 
